--- a/src/pages/lista/lista.scss
+++ b/src/pages/lista/lista.scss
@@ -40,13 +40,14 @@
 }
 
 .coluna2 {
-    width: 65%;
+    padding-left: 11%;
+    width: 30%;
     text-align: left;
-    padding-top: 4%;
+    font-size: 16px;
 }
 
 .coluna3 {
-    width: 20%;
+    width: 14%;
     padding-left: 1%;
     padding-bottom: 3%;
 }
