--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -4,7 +4,12 @@
     border-radius: 30px;
     margin-top: -7px;
     font-size: 20px;
-} 
+}
+
+.texto3 {    
+    width: 95%;
+    padding: 2%;    
+}
 
 .texto2 {
     height: 38px;
@@ -13,6 +18,11 @@
     border-radius: 10px;
     text-align: center;
     font-size: 16px;
-    margin-bottom: 10%;
-    margin-top: 10%;
+    margin-bottom: 6%;
+    margin-top: 5%;
+}
+
+table {
+    border-spacing: 2px;
+    border-collapse: initial;
 }
