--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -6,23 +6,35 @@
     font-size: 20px;
 }
 
-.texto3 {    
+.texto3 {
+    font-size: 16px;    
     width: 95%;
-    padding: 2%;    
+    padding: 2%;
+    border: none;
+    border-bottom: solid 1px #8a8989;   
 }
 
 .texto2 {
+    font-size: 16px;
     height: 38px;
-    width: 25%;
-    border: 1px solid;
-    border-radius: 10px;
+    width: 25%;        
     text-align: center;
     font-size: 16px;
     margin-bottom: 6%;
     margin-top: 5%;
+    border: none;
+    border-bottom: solid 1px #8a8989;   
+    
+}
+
+.texto4{
+    margin-top: 3%;
+    border-color: #8a8989;
 }
 
 table {
     border-spacing: 2px;
     border-collapse: initial;
+    margin-top: 3%;
+    margin-bottom: 6%;
 }
