--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -6,7 +6,7 @@
     font-size: 20px;
 }
 
-.texto3 {
+.textoItem {
     font-size: 16px;    
     width: 95%;
     padding: 2%;
@@ -14,7 +14,7 @@
     border-bottom: solid 1px #8a8989;   
 }
 
-.texto2 {
+.textoItem2 {
     font-size: 16px;
     height: 38px;
     width: 25%;        
@@ -27,7 +27,7 @@
     
 }
 
-.texto4{
+.textoItem3{
     margin-top: 3%;
     border-color: #8a8989;
 }
