--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,13 @@
-page-login {
+.texto2{
+    font-size: 17px;
+    width: 95%;    
+    border: none;
+    border-bottom: solid 1px #8a8989;    
+    margin-top: 7%;
+    height: 21px;   
+}
 
+.font1{
+    text-align: center; 
+    font-size: 16px;
 }
