--- a/src/pages/add-lista/add-lista.scss
+++ b/src/pages/add-lista/add-lista.scss
@@ -2,3 +2,18 @@
     margin: 3% 1%;
     width: 99%;
 }
+
+.icoLixo{
+    font-size: 2.1em;
+    float: right;
+    margin-top: -9%;
+    color: red;
+}
+
+.icon1{
+    display: inline-block;
+    font-size: 3.1em;
+    float: left;    
+    color: #1fc11f;
+    margin: 5% 0%;
+}
