--- a/src/pages/cadastro-login/cadastro-login.scss
+++ b/src/pages/cadastro-login/cadastro-login.scss
@@ -1,3 +1,15 @@
-page-cadastro-login {
+.texto5{
+    font-size: 17px;
+    width: 95%;
+    padding: 2%;
+    border: none;
+    border-bottom: solid 1px #8a8989;
+    padding-top: 12%;
+    margin-top: -2%;
+    height: 40px;
+}
 
+.font1{
+    text-align: center; 
+    font-size: 16px;
 }
