--- a/src/pages/lista/lista.scss
+++ b/src/pages/lista/lista.scss
@@ -70,3 +70,11 @@
     width: 10px;
     height: 20px;
 }
+
+.logo1{
+    display: inline-block;
+    font-size: 2.5em;
+    float: right;
+    margin-top: -9%;
+    margin-right: 5%;
+}
