--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,3 +4,26 @@
     float: right;
     margin-top: -9%;
 }
+
+.icoLixo{
+    font-size: 1.9em;
+    float: right;
+    margin-top: -9%;
+    color: red;
+}
+
+.icoEdit{
+    font-size: 1.9em;
+    float: right;
+    margin-top: -9%;
+    color: #28a745;
+}
+
+.list{
+    margin: 0%;
+    margin: 2% 0% 2% 0%;
+}
+
+ion-label.label.label-md {
+    margin: 2% 0% 2% 0%;
+}
