--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -28,13 +28,12 @@
 }
 
 .textoItem3{
-    margin-top: 3%;
+    margin-top: 10%;
+    margin-left: 3%;
     border-color: #8a8989;
 }
 
-table {
-    border-spacing: 2px;
-    border-collapse: initial;
-    margin-top: 3%;
-    margin-bottom: 6%;
+.fontItem{
+    font-size: 17px;
 }
+
