--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -11,7 +11,8 @@
     width: 95%;
     padding: 2%;
     border: none;
-    border-bottom: solid 1px #8a8989;   
+    border-bottom: solid 1px #8a8989;
+    text-align: center;   
 }
 
 .textoItem2 {
@@ -33,7 +34,16 @@
     border-color: #8a8989;
 }
 
-.fontItem{
+.fontStandard{
     font-size: 17px;
+}
+
+.icoLixo2 {
+    font-size: 2.4em;
+    float: right;
+    margin-top: -9%;
+    color: red;
+    margin-left: 6%;
+    padding-top: 35%;
 }
 
