--- a/src/pages/add-lista/add-lista.scss
+++ b/src/pages/add-lista/add-lista.scss
@@ -10,3 +10,16 @@
     color: #1fc11f;
     margin: 5% 0%;
 }
+
+.icoLixoCard {
+    font-size: 2.0em;;
+    float: right;
+    margin-top: -40%;
+    color: red;
+    text-align: center;
+}
+
+.fontBt{
+    font-size: 16px;
+    font-weight: 500;
+}
