--- a/src/pages/add-lista/add-lista.scss
+++ b/src/pages/add-lista/add-lista.scss
@@ -13,8 +13,9 @@
 
 .icoLixoCard {
     font-size: 2.0em;;
-    float: right;
+    //float: right;
     margin-top: -40%;
+    margin-left: 35%;
     color: red;
     text-align: center;
 }
@@ -23,3 +24,12 @@
     font-size: 16px;
     font-weight: 500;
 }
+
+.icoExit{    
+    font-size: 2.7em;
+    color: red;
+    text-align: center;
+    margin-top: -50%;
+    margin-left: 16%;
+}
+    
