--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -1,3 +1,7 @@
+.fontStandard{
+    font-size: 15px;
+}
+
 .botaoLista{
     height: 40px;
     width: 35px;
@@ -7,9 +11,10 @@
 }
 
 .textoItem {
-    font-size: 16px;    
-    width: 95%;
-    padding: 2%;
+    font-size: 16px;
+    width: 100%;
+    padding: 7% 0% 0% 0%;
+    margin-left: 12%;
     border: none;
     border-bottom: solid 1px #8a8989;
     text-align: center;   
@@ -29,22 +34,15 @@
 }
 
 .textoItem3{
-    margin-top: 10%;
-    margin-left: 3%;
+    margin-top: 10%;    
     border-color: #8a8989;
-}
-
-.fontStandard{
-    font-size: 17px;
 }
 
 .icoLixo2 {
     font-size: 2.4em;
-    float: right;
-    margin-top: -9%;
-    color: red;
-    margin-left: 6%;
-    padding-top: 35%;
+    float: right;    
+    color: red;    
+    padding-top: 12%;
 }
 
 .title1{
