--- a/src/pages/add-item/add-item.scss
+++ b/src/pages/add-item/add-item.scss
@@ -16,7 +16,7 @@
     padding: 7% 0% 0% 0%;
     margin-left: 12%;
     border: none;
-    border-bottom: solid 1px #8a8989;
+    border-bottom: solid 1px #3521af;
     text-align: center;   
 }
 
@@ -29,13 +29,13 @@
     margin-bottom: 6%;
     margin-top: 5%;
     border: none;
-    border-bottom: solid 1px #8a8989;   
+    border-bottom: solid 1px #3521af;  
     
 }
 
 .textoItem3{
     margin-top: 10%;    
-    border-color: #8a8989;
+    border-color: #3521af;
 }
 
 .icoLixo2 {
