--- a/src/pages/add-lista/add-lista.scss
+++ b/src/pages/add-lista/add-lista.scss
@@ -2,7 +2,7 @@
     font-size: 2.0em;    
     margin-top: -40%;
     margin-left: 35%;
-    color: #fdf700;
+    color: #e7eb13;
     text-align: center;
 }
 
@@ -13,7 +13,7 @@
 
 .icoExit{    
     font-size: 2.7em;
-    color: #fdf700;
+    color: #e7eb13;
     text-align: center;
     margin-top: -50%;
     margin-left: 16%;
