--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -44,4 +44,16 @@ ion-label.label.label-md {
         visibility: visible;
     } 
 }
+
+.alignCenter{
+    text-align: center;
+    color: #797979;
+    font-weight: 500;
+    position: absolute;
+    top: 25%;
+    left: 0%;
+    width: 100%;
+    font-size: 16px;
+    padding: 3%;
+}
     
